--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/* Specifications */
+
 * {
     padding: 0;
     margin: 0;
@@ -6,4 +8,33 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Nunito Sans', sans-serif;
+    background-color: #e9e9e9;
+}
+
+/* HEADER */
+
+header {
+    height: 25px;
+    margin: 25px 0;
+}
+
+.menu {
+    list-style: none;
+}
+
+.menu__item {
+    margin: 0 auto;
+}
+
+.menu__item a {
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 12px;
+    color: #191919;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.menu__item a:hover {
+    color: #10c9c3;
 }
