--- a/css/main.css
+++ b/css/main.css
@@ -13,28 +13,16 @@ body {
 
 /* HEADER */
 
-header {
-    height: 25px;
-    margin: 25px 0;
-}
 
-.menu {
-    list-style: none;
-}
-
-.menu__item {
-    margin: 0 auto;
-}
-
-.menu__item a {
+.nav-item a {
     font-family: Montserrat;
-    font-weight: 500;
+    font-weight: 800;
     font-size: 12px;
     color: #191919;
     text-decoration: none;
     text-transform: uppercase;
 }
 
-.menu__item a:hover {
+.nav-item a:hover {
     color: #10c9c3;
 }
